# pdebugcpp

./: CMakeLists.txt  README.md  globalloger.h  main.cpp  resultprinter.cpp  resultprinter.h
resultprinterlib/: resultprinter.h
tests/: CMakeLists.txt
tests/test_functionsLogs/: CMakeLists.txt  test.cpp
